syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";

message DrowsinessData {
  string username = 1;
  string car_id = 2;
  google.protobuf.Timestamp time = 3;
  double response_time = 4;
  double working_hour = 5;
  double latitude = 6;
  double longitude = 7;
  string road = 8;
}
message DrowsinessStatCalData {
  string name = 1;
  repeated int32 data = 2;
}

message CreateDrowsinessDataResponse { string drowsiness_id = 1; }

message GetDrowsinessDataRequest {
  optional google.protobuf.Timestamp from = 1;
  optional google.protobuf.Timestamp to = 2;
  optional string car_id = 3;
  optional string username = 4;
}

message GetDrowsinessDataResponse { repeated DrowsinessData drowsinesses = 1; }

message GetNumberOfDrowsinessToCalendarRequest { optional int64 year = 1; }

message GetNumberOfDrowsinessToCalendarResponse {
  repeated DrowsinessStatCalData drowsinesss = 1;
}

message GetNumberOfDrowsinessTimeBarRequest {
  optional google.protobuf.Timestamp from = 1;
  optional google.protobuf.Timestamp to = 2;
}

message GetNumberOfDrowsinessTimeBarResponse { repeated int32 drowsinesss = 1; }

message GetDrowsinessStatGroupByHourRequest {
  optional google.protobuf.Timestamp from = 1;
  optional google.protobuf.Timestamp to = 2;
  optional string driver_username = 3;
}

message GetDrowsinessStatGroupByHourResponse {
  repeated int64 drowsinesses = 1;
}

service DrowsinessService {
  rpc CreateDrowsinessData(DrowsinessData)
      returns (CreateDrowsinessDataResponse) {}
  rpc GetDrowsinessData(GetDrowsinessDataRequest)
      returns (GetDrowsinessDataResponse) {}
  rpc GetNumberOfDrowsinessToCalendar(GetNumberOfDrowsinessToCalendarRequest)
      returns (GetNumberOfDrowsinessToCalendarResponse) {}
  rpc GetNumberOfDrowsinessTimeBar(GetNumberOfDrowsinessTimeBarRequest)
      returns (GetNumberOfDrowsinessTimeBarResponse) {}
  rpc GetDrowsinessStatGroupByHour(GetDrowsinessStatGroupByHourRequest)
      returns (GetDrowsinessStatGroupByHourResponse) {}
}